打ち返し実装したお

--- a/AnimalSmash/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/AnimalSmash/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -141,12 +141,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":1.1920927533992654e-7,\"y\":2.3841863594498138e-7,\"z\":0.0}}"
+                "value": "{\"m_Value\":{\"x\":0.0,\"y\":0.0,\"z\":0.0}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":0.7909653186798096,\"y\":1.6674985885620118,\"z\":11.463635444641114}}"
+                "value": "{\"m_Value\":{\"x\":10.939346313476563,\"y\":0.07248830795288086,\"z\":-0.37825632095336916}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
